Closed Bug 806762 Opened 12 years ago Closed 12 years ago

Thunderbird build is broken after Bug 792180 (error: ‘NS_UNLIKELY’ was not declared in this scope)

Categories

(MailNews Core :: Networking: POP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 19.0

People

(Reporter: ojab, Assigned: ojab)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
c++ -o nsPop3IncomingServer.o -c -I../../../mozilla/dist/stl_wrappers -I../../../mozilla/dist/system_wrappers -include /sources/comm-central/mozilla/config/gcc_hidden.h -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES  -DMOZ_THUNDERBIRD=1 -DOSTYPE=\"Linux3.6\" -DOSARCH=Linux -DHAVE_MOVEMAIL  -I/sources/comm-central/mailnews/local/src -I. -I../../../mozilla/dist/include -I../../../mozilla/dist/include/nsprpub  -I/usr/include/nspr -I/usr/include/nss      -fPIC  -pedantic -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Werror=conversion-null -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wcast-align -Wno-long-long -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe  -DNDEBUG -DTRIMMED -g -Os -freorder-blocks  -fomit-frame-pointer   -DMOZILLA_CLIENT -include ../../../comm-config.h -MD -MF .deps/nsPop3IncomingServer.pp /sources/comm-central/mailnews/local/src/nsPop3IncomingServer.cpp
/sources/comm-central/mailnews/local/src/nsPop3IncomingServer.cpp: In member function ‘virtual nsresult nsPop3IncomingServer::AddUidlToMark(const char*, int32_t)’:
/sources/comm-central/mailnews/local/src/nsPop3IncomingServer.cpp:626:35: error: ‘NS_UNLIKELY’ was not declared in this scope
/sources/comm-central/mailnews/local/src/nsPop3IncomingServer.cpp: In member function ‘virtual nsrefcnt nsPop3GetMailChainer::Release()’:
/sources/comm-central/mailnews/local/src/nsPop3IncomingServer.cpp:666:1: warning: deleting object of polymorphic class type ‘nsPop3GetMailChainer’ which has non-virtual destructor might cause undefined behaviour [-Wdelete-non-virtual-dtor]
make[8]: *** [nsPop3IncomingServer.o] Error 1
Attachment #676498 - Flags: review?
Blocks: 792180
Comment on attachment 676498 [details] [diff] [review]
patch

Thanks for catching this ahead of time, looks like we can land it at any time.
Attachment #676498 - Flags: review? → review+
Assignee: nobody → ojab
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/d2fc0b13fff4

Thanks for doing the patch.
Status: NEW → RESOLVED
Closed: 12 years ago
Keywords: checkin-needed
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 19.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: