Bug 806762 - Thunderbird build would be broken after Bug 792180 (error: NS_UNLIKELY was not declared in this scope) - switch to MOZ_UNLIKELY. r=Standard8